<resources>
    <string name="app_name">GMAuto</string>
    <string name="welcome">Welcome</string>
    <string name="SplashNote">Don\'t worry we got your back</string>
    <string name="WelcomeNote">Get Your All Automobile Services In Here!</string>
    <string name="AccountCreateButtonName">Create an account</string>
    <string name="AlreadyHaveAccountMessage">Already Have An Account ?</string>
    <string name="LoginButtonAndLoginTitle">Sign in</string>
    <string name="splash_screen_img">splash screen img</string>
    <string name="EmailPlaceHolder">Email</string>
    <string name="PasswordPlaceHolder">Password</string>
    <string name="ForgotPasswordMessage">Forgot password  ?</string>
    <string name="NotRegisteredMessage">Not Registered ?</string>
    <string name="CreateAccountButton">Create Account</string>
    <string name="RegisterTitle">Register</string>
    <string name="FullNamePlaceHolder">Full Name</string>
    <string name="ConfirmPasswordPlaceHolder">Confirm Password</string>
    <string name="SignUpButton">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_darwer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">"Open navigation darwer "</string>
    <string name="Rating">Rating</string>
    <string name="RatingWithCount">Rating (%.1f/5)</string>

    <string name="RatingAvgvalue">(%.1f/5)</string>
    <string name="Ratingvalue">0/5</string>
    <string name="addReviewbtn">Add Review</string>
    <string name="noReviews">No Reviews</string>
    <string name="rateandReview">Rate and review</string>
    <string name="reviewmessage">Enter Your Review</string>
    <string name="review">Review</string>
    <string name="post">Post</string>
    <string name="deletebtn">DeleteBtn</string>
    <string name="editbtn">EditBtn</string>
    <string name="title_activity_admin_sparepart">adminSparepartAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Closedialogue">"Close Dialogue  "</string>
    <string name="LoadingDialog">Loading ....</string>
    <string name="Gallery">Gallery</string>
    <string name="AddItem">Add Item</string>
    <string name="Selectimage">Select Image</string>
    <string name="UpdateItem">Update Item</string>
    <string name="uploadimges">uploadimage</string>
    <string name="TechnicalSpecifications">Technical Specifications</string>
    <string name="ManufacturingPlaceholder">Enter Manufacturing Year</string>
    <string name="FuelPlaceholder">Fuel Type</string>
    <string name="TransmissionPlaceholder">Select Transmission</string>
    <string name="EngineCapacity">Engine Capacity</string>
    <string name="MileagePlaceholder">Enter Mileage</string>
    <string name="EngineCapacityPlaceholder">Enter Capacity</string>
    <string name="ColorPlaceholder">Enter Color</string>
    <string name="Fuel">Fuel</string>
    <string name="Transmission">Transmission</string>
    <string name="Searchplaeholder">Search</string>
    <string name="Filters">Filters</string>
    <string name="make_appoinment">Make Appoinment</string>
    <string name="select">Select</string>
    <string name="selectTime">Select Time</string>
    <string name="SelectDate">Select Date</string>
    <string name="VehicleRegistrationNo">"Vehicle Registration No "</string>
    <string name="ContactUs">Contact No</string>
    <string name="ServiceType">Select Service Type</string>
    <string name="Submit">Submit</string>
    <string name="your_request_has_been_submitted_successfully">Your Request Has Been Submitted Successfully</string>
    <string name="Total">LKR %.2f </string>
    <string name="Price">LKR %.2f </string>
    <string name="vehiclePrice">LKR %.2f Million</string>
    <string name="orderSucces">Order was successfully placed.</string>
    <string name="OrderConfirmation">Your order will be reviewed and confirmed by our employees. Delivery and other information will be sent to you via the provided email within 24 hours. Thank you for selecting us.</string>
    <string name="tab" />
    <string name="Sort">Sort</string>
    <string name="acceptemsg">Check your provided email for further information.</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="reservationimg">Reservationimg</string>
    <string name="title">Title</string>
    <string name="edit_your_order">Edit Your Order</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="sort">Sort</string>
    <string name="sparpartitemimageholder">sparpartItemImageHolder</string>
    <string name="order">Order</string>
    <string name="reviews">Reviews</string>
    <string-array name="filters">
        <item>Newst</item>
        <item>Old</item>
        <item>low-priced</item>
        <item>high-priced</item>
    </string-array>


    <string-array name="Quanity">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>50(Max)</item>
    </string-array>

</resources>