<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
<TextView
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Rating"
    android:textStyle="bold"
    android:textSize="15sp"
    android:layout_margin="10dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <RatingBar
            android:layout_margin="5dp"
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:numStars="5"

            android:contentDescription="@string/Rating" />
        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_margin="5dp"
            android:paddingRight="20dp"
            android:layout_weight="2"
            android:text="@string/app_name"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/reviewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/AccountCreateButtonName"
        />
</LinearLayout>