<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rateandReview"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/ratingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
         />
        <RatingBar
            android:id="@+id/ratingInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:numStars="5" />
    </LinearLayout>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/review"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/reviewmessage"
        app:errorEnabled="true"
        app:errorTextColor="@color/errorRed"
        app:boxStrokeColor="@color/blue"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:id="@+id/reviewTextLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"
            android:maxLines="50"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            android:scrollHorizontally="false"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/post"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/post"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        android:layout_gravity="center"
        app:cornerRadius="30dp" />

</LinearLayout>